done-page Loc Ho So
Thinh

--- a/Front End/ThinhNQ/banggia.html
+++ b/Front End/ThinhNQ/banggia.html
@@ -26,7 +26,7 @@
     <div class="bgGray">
       <header>
         <nav class="container navbar navbar-expand-lg navbar-light">
-          <a class="navbar-brand" href="#">
+          <a class="navbar-brand" href="home-ntd.html">
             <img src="images/logo.png" width="250" alt="Logo Tìm Việc Làm" />
           </a>
           <button
@@ -57,7 +57,7 @@
                   </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#"
+                  <a class="nav-link" href="service-file.html"
                     ><i class="fas fa-user mr-2 icon-menu"></i>LỌC HỒ SƠ</a
                   >
                 </li>
@@ -77,109 +77,82 @@
                   >
                 </li>
                 <!-- modal title -->
-                <div
-                  class="modal fade"
-                  id="exampleModal"
-                  tabindex="-1"
-                  aria-labelledby="exampleModalLabel"
-                  aria-hidden="true"
-                >
-                  <div class="modal-dialog">
-                    <div class="modal-content modal-content-width">
-                      <div class="modal-header">
-                        <h5
-                          class="modal-title el-dialog__header"
-                          id="exampleModalLabel"
-                        >
-                          Đăng ký tư vấn dịch vụ
-                        </h5>
-                        <button
-                          type="button"
-                          class="close"
-                          data-dismiss="modal"
-                          aria-label="Close"
-                        >
-                          <span aria-hidden="true">&times;</span>
-                        </button>
-                      </div>
-                      <div class="modal-body">
-                        <!--  -->
-                        <div class="el-dialog__body">
-                          <p class="el-dialog-modal-title mb-3">
-                            Mời quý công ty điền các thông tin dưới đây để đăng
-                            ký dịch vụ:
-                          </p>
-                          <div class="mw_form">
-                            <div class="mb-3">
-                              <label class="el-dialog-title-section"
-                                >Người liên hệ <span>(*)</span></label
-                              >
-                              <div class="form-item-modal">
-                                <i class="fas fa-user icon-modal"></i
-                                ><input class="form-control" />
-                              </div>
+                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                aria-hidden="true">
+                <div class="modal-dialog">
+                  <div class="modal-content modal-content-width">
+                    <div class="modal-header">
+                      <h5 class="modal-title el-dialog__header" id="exampleModalLabel">
+                        Đăng ký tư vấn dịch vụ
+                      </h5>
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                      </button>
+                    </div>
+                    <div class="modal-body">
+                      <!--  -->
+                      <div class="el-dialog__body">
+                        <p class="el-dialog-modal-title mb-3">
+                          Mời quý công ty điền các thông tin dưới đây để đăng ký
+                          dịch vụ:
+                        </p>
+                        <div class="mw_form">
+                          <div class="mb-3">
+                            <label class="el-dialog-title-section">Người liên hệ <span>(*)</span></label>
+                            <div class="form-item-modal">
+                              <i class="fas fa-user icon-modal"></i><input class="form-control" />
                             </div>
-                            <div class="mb-3">
-                              <label class="el-dialog-title-section"
-                                >Số điện thoại <span>(*)</span></label
-                              >
-                              <div class="form-item-modal">
-                                <i
-                                  class="fas fa-phone fa-rotate-90 icon-modal-phone"
-                                ></i
-                                ><input class="form-control" />
-                              </div>
+                          </div>
+                          <div class="mb-3">
+                            <label class="el-dialog-title-section">Số điện thoại <span>(*)</span></label>
+                            <div class="form-item-modal">
+                              <i class="fas fa-phone fa-rotate-90 icon-modal-phone"></i><input class="form-control" />
                             </div>
-                            <div class="mb-3">
-                              <label class="el-dialog-title-section"
-                                >Địa chỉ email <span>(*)</span></label
-                              >
-                              <div class="form-item-modal">
-                                <i class="fas fa-envelope icon-modal-email"></i
-                                ><input class="form-control" />
-                              </div>
+                          </div>
+                          <div class="mb-3">
+                            <label class="el-dialog-title-section">Địa chỉ email <span>(*)</span></label>
+                            <div class="form-item-modal">
+                              <i class="fas fa-envelope icon-modal-email"></i><input class="form-control" />
                             </div>
-                            <div class="mb-3">
-                              <label class="el-dialog-title-section"
-                                >Tên công ty
-                                <!----></label
-                              >
-                              <div class="form-item-modal">
-                                <i
-                                  class="fas fa-building icon-modal-building"
-                                ></i
-                                ><input class="form-control" />
-                              </div>
+                          </div>
+                          <div class="mb-3">
+                            <label class="el-dialog-title-section">Tên công ty
+                              <!----></label>
+                            <div class="form-item-modal">
+                              <i class="fas fa-building icon-modal-building"></i><input class="form-control" />
                             </div>
-                            <div class="mb-3">
-                              <label class="el-dialog-title-section"
-                                >Yêu cầu thêm
-                                <!----></label
-                              >
-                              <div class="form-item-modal">
-                                <textarea class="form-control"></textarea>
-                              </div>
+                          </div>
+                          <div class="mb-3">
+                            <label class="el-dialog-title-section">Yêu cầu thêm
+                              <!----></label>
+                            <div class="form-item-modal">
+                              <textarea class="form-control"></textarea>
                             </div>
                           </div>
                         </div>
-
-                        <!--  -->
                       </div>
-                      <div class="modal-footer">
-                        <button
-                          type="button"
-                          class="btn btn-secondary"
-                          data-dismiss="modal"
-                        >
-                          Bỏ qua
-                        </button>
-                        <button type="button" class="btn btn-primary">
-                          Đăng ký ngay
-                        </button>
-                      </div>
+  
+                      <!--  -->
+                    </div>
+                    <div class="modal-footer">
+                      <span class="hotline pull-left modal-footer-textleft">
+                        <h5 class="mb-1">Hoặc liên hệ bộ phận CSKH của TimViecLam:</h5>
+                        <p class="text-danger"><i class="fas fa-phone-alt mr-1"></i> Miền Bắc: <strong
+                            class="fs-15">(024) 899 88688</strong><i class="fas fa-phone-alt ml-2 mr-1"></i> Miền Nam: <strong
+                            class="fs-15">(028) 894 88688</strong></p>
+                        <p class="text-primary mt-1"><i class="far fa-envelope mr-1"></i> Email: <strong><a
+                              href="mailto:hotro@timvieclam.xyz" target="_top">hotro@timvieclam.xyzn</a></strong></p>
+                      </span>
+                      <button type="button" class="btn btn-secondary" data-dismiss="modal">
+                        Bỏ qua
+                      </button>
+                      <button type="button" class="btn btn-primary">
+                        Đăng ký ngay
+                      </button>
                     </div>
                   </div>
                 </div>
+              </div>
                 <!--  -->
               </div>
             </form>
@@ -362,7 +335,7 @@
                     quả lâu dài
                   </li>
                   <li>
-                    <a href="#" class="btn btn-warning-price btn-block"
+                    <a href="service-file.html" class="btn btn-warning-price btn-block"
                       >Xem chi tiết</a
                     >
                   </li>
