--- a/Front End/ThinhNQ/home-ntd.html
+++ b/Front End/ThinhNQ/home-ntd.html
@@ -19,7 +19,7 @@
   <!-- menu -->
   <header>
     <nav class="container navbar navbar-expand-lg navbar-light">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="home-ntd.html">
         <img src="images/logo.png" width="250" alt="Logo Tìm Việc Làm" />
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -39,14 +39,15 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#"><i class="fas fa-user mr-2 icon-menu"></i>LỌC HỒ SƠ</a>
+              <a class="nav-link" href="service-file.html"><i class="fas fa-user mr-2 icon-menu"></i>LỌC HỒ SƠ</a>
             </li>
           </div>
         </ul>
         <form class="form-inline my-2 my-lg-0">
           <div class="dropdown-menu-top">
             <li class="nav-item dropdown btn btn-bd-submit mb-3 mb-md-0 ml-md-3 header-menu-bottom bg-info">
-              <a class="text-white p-1" href="#" data-toggle="modal" data-target="#exampleModal"><i class="far fa-hand-pointer mr-1"></i> ĐĂNG KÝ DỊCH VỤ</a>
+              <a class="text-white p-1" href="#" data-toggle="modal" data-target="#exampleModal"><i
+                  class="far fa-hand-pointer mr-1"></i> ĐĂNG KÝ DỊCH VỤ</a>
             </li>
             <!-- modal title -->
             <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
@@ -107,6 +108,14 @@
                     <!--  -->
                   </div>
                   <div class="modal-footer">
+                    <span class="hotline pull-left modal-footer-textleft">
+                      <h5 class="mb-1">Hoặc liên hệ bộ phận CSKH của TimViecLam:</h5>
+                      <p class="text-danger"><i class="fas fa-phone-alt mr-1"></i> Miền Bắc: <strong
+                          class="fs-15">(024) 899 88688</strong><i class="fas fa-phone-alt ml-2 mr-1"></i> Miền Nam: <strong
+                          class="fs-15">(028) 894 88688</strong></p>
+                      <p class="text-primary mt-1"><i class="far fa-envelope mr-1"></i> Email: <strong><a
+                            href="mailto:hotro@timvieclam.xyz" target="_top">hotro@timvieclam.xyzn</a></strong></p>
+                    </span>
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">
                       Bỏ qua
                     </button>
@@ -171,13 +180,13 @@
 
       <div class="row mt-5">
         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 txr">
-          <a href="banggia.html" class="">
+          <a href="#" class="">
             <button type="button" class="el-button btn-block mb-n mt-10 post-news">
               <span>Đăng Tin tuyển dụng</span>
             </button></a>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-          <a href="banggia.html" class=""><button type="button"
+          <a href="service-file.html" class=""><button type="button"
               class="el-button btn-block mb-n mt-10 el-button--primary selective-uv">
               <span>Lọc hồ sơ ứng viên</span>
             </button></a>
