done page(about, security, use, regulations)
Thinh

--- a/Front End/ThinhNQ/home-ntd.html
+++ b/Front End/ThinhNQ/home-ntd.html
@@ -362,7 +362,7 @@
           </h6>
           <div class="text__info--title">
             <p>
-              <a href="intro.html">Về Timvieclam.xyz</a>
+              <a href="about.html">Về Timvieclam.xyz</a>
             </p>
             <!-- <p>
                 <a href="#!">Quy Chế</a>
@@ -374,7 +374,7 @@
               <a href="use.html">Thỏa Thuận Sử Dụng</a>
             </p>
             <p>
-              <a href="bvtt.html">Chính Sách BV Thông Tin Cá Nhân</a>
+              <a href="regulations.html">Chính Sách BV Thông Tin Cá Nhân</a>
             </p>
           </div>
         </div>
