--- a/Front End/ThinhNQ/profile-employer.html
+++ b/Front End/ThinhNQ/profile-employer.html
@@ -40,9 +40,8 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="service-file.html"><i
-                                        class="fas fa-user mr-2 icon-menu"></i>LỌC
-                                    HỒ SƠ</a>
+                                <a class="nav-link" href="service-file.html">
+                                <i class="fas fa-user mr-2 icon-menu"></i>LỌC HỒ SƠ</a>
                             </li>
                         </div>
                     </ul>
@@ -148,9 +147,6 @@
         <!--  -->
         <div class="container">
             <section class="candidate-detail">
-
-
-
                 <div class="row">
                     <div class="col-md-8 col-lg-8 col-left">
                         <div id="detail-el" class="box-general-detail pb-15">
